<resources>
    <string name="app_name">Google Developers Community Visualization Tool</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_splash_screen">splash_screen</string>
    //Navigation
    <string name="Home">HOME</string>
    <string name="Upcoming_Events">UPCOMING EVENTS</string>
    <string name="Calendar">EVENTS CALENDAR</string>
    <string name="Settings">SETTINGS</string>
    <string name="Old_Data">Old GDG Data</string>
    <string name="GDG_ChapterDetails">CHAPTER DETAIL</string>
    <string name="UpcomingEvent">EVENTS</string>
    <string name="NavViewInto">"This is navigation view"</string>
    <string name="NavViewMenuButton">"Slide to show Navigation"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_connection"> Test Location …</string>
    //Messages
    <string name="GDG_Sub_headingFirst">Connect with local developers and learn new skills</string>
    <string name="GDG_Sub_headingSecond">Join a GDG chapter near you and discover the \nlatest Google technologies</string>
    //Home
    <string name="google_developer_ngroups">Google Developer\nGroups</string>
    <string name="active_chapters">Active Chapters</string>
    <string name="statistics">Statistics</string>
    <string name="max_groups_in_countries">Max groups in Countries</string>
    <string name="top_10_events">Top 10 Events</string>
    //ChapterDetails
    <string name="about_gdg">About GDG</string>
    <string name="organizers">Organizers</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="past_events">Past Events</string>
    <string name="stop_tour_gdg">Stop Tour GDG</string>
    <string name="start_tour_gdg">Start Tour GDG</string>
    //Settings
    <string name="connection">Connection</string>
    <string name="language">Language</string>
    <string name="text_to_speech">Text To Speech</string>
    <string name="alarm_notification">Alarm Notification</string>
    <string name="clear_database">Clear Database</string>
    <string name="night_mode">Night Mode</string>
    //Connection
    <string name="lg_ip_address" translatable="false">193.168.153.3</string>
    <string name="lg_name">LG Name</string>
    <string name="lg_password">LG Password</string>
    <string name="activity_connection_error">It was not possible to connect to Liquid Galaxy.</string>
    <string name="activity_connection_host_port_error">The format for the host and port is not valid.</string>
    <string name="rebootLG">Wait! LG is restarting</string>
    <string name="ShutdownLG">Lg will now ShutDown</string>
    <string name="activity_connection_error_connect">It was not possible to connect to Liquid Galaxy.</string>
    <string name="button_try_again">Try Again</string>
    <string name="activity_connection_success">You are now connected to Liquid Galaxy</string>
    <string name="connecting"> Connecting …</string>
    <string name="clean_kml">Clean Kml</string>
    <string name="reboot_lg">Reboot LG</string>
    <string name="poweroff_lg">PowerOff LG</string>
    <string name="set_refresh">Set Refresh</string>
    <string name="reset_refresh">Reset Refresh</string>
    <string name="relaunch_lg">Relaunch LG</string>
    <string name="save_kml">Save KML</string>
    <string name="gdg_name">GDG Name</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="about_this_event">About this Event</string>
    <string name="members">Members</string>
    <string name="notify_for_the_events">Notify For the Events</string>
    <string name="last_week_events">Last Week Events</string>
    <string name="not_connected">LG Not Connected</string>
    <string name="connected">LG Connected</string>
    <string name="notification">NOTIFICATION</string>
    <string name="port" translatable="false">22</string>
    <string name="old_event" translatable="false">OLD GDG</string>
    <string name="event_details" translatable="false">EVENT DETAILS</string>
    <string name="upcomingevent_details" translatable="false">EVENT DETAILS</string>
    <string name="clearDatabaseMessage" translatable="false"> Would you like to delete all data from database?</string>
    <string name="aboutText">1) Discover the new Google Developer Group right on your Home Screen. Stay in the loop with upcoming events, community insights, and organizers\' details, all seamlessly sourced from the official https://gdg.community.dev/.\n\n 2) Users can conveniently view upcoming events under the Upcoming Events section. Upon refreshing, recently concluded events from the previous week will also be showcased, providing a comprehensive snapshot of recent activities.\n\n 3) Retrieve legacy Google Developer Groups from the dedicated source, https://gdgsearch.com/, crafted by Kevin Simper, offering insight into historical Google Developer Group chapters and their contributions.</string>

    <string-array name="languages">
        <item>English</item>
        <item>Hindi</item>
    </string-array>
</resources>
