<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.settings.LgTask">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CleanKML"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/cardview"
        android:backgroundTint="@color/ButtonColor"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:text="@string/clean_kml"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RebootLg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/RebootLg"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/cardview"
        android:backgroundTint="#7209b7"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:textColor="@color/white"
        android:text="@string/reboot_lg"
        android:textSize="30dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/CleanKML"
        app:layout_constraintEnd_toStartOf="@+id/ResetRefresh"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/CleanKML" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ResetRefresh"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/cardview"
        android:backgroundTint="#f4acb7"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:text="@string/reset_refresh"
        app:layout_constraintBaseline_toBaselineOf="@+id/RebootLg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/RebootLg" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/PowerOffLg"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/cardview"
        android:backgroundTint="#003566"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:text="@string/poweroff_lg"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/SetRefresh"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CleanLogo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SetRefresh"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/cardview"
        android:backgroundTint="#06d6a0"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:textColor="@color/white"
        android:text="@string/set_refresh"
        android:textSize="30dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/PowerOffLg"
        app:layout_constraintEnd_toStartOf="@+id/SaveKml"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/PowerOffLg" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SaveKml"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/cardview"
        android:backgroundTint="#3c6e71"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:textColor="@color/white"
        android:text="@string/save_kml"
        android:textSize="30dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/SetRefresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/SetRefresh" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CleanLogo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/cardview"
        android:backgroundTint="#ef233c"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:text="Clean Logo"
        android:textSize="30dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/RelaunchLg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CleanKML" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/RelaunchLg"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/cardview"
        android:backgroundTint="#ffb703"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:textColor="@color/white"
        android:text="@string/relaunch_lg"
        android:textSize="30dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/CleanLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/CleanLogo" />
</androidx.constraintlayout.widget.ConstraintLayout>