<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.settings.connection.connection">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardViewipAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/CardViewTransparent"
        app:cardCornerRadius="20dp"
        android:layout_margin="20dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardViewLgName">

        <EditText
            android:id="@+id/IpAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardview"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/lg_ip_address"
            android:padding="20dp"
            android:textAlignment="viewStart"
            android:textColor="@color/MainHeadingText"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardViewPort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/CardViewTransparent"
        app:cardCornerRadius="20dp"
        android:layout_margin="20dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardViewipAddress">

        <EditText
            android:id="@+id/PortEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardview"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/port"
            android:padding="20dp"
            android:textAlignment="viewStart"
            android:textColor="@color/MainHeadingText"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.card.MaterialCardView>

    <!--    <EditText-->
    <!--        android:id="@+id/PortEdittext"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:hint="Port"-->
    <!--        android:textSize="30dp"-->
    <!--        android:layout_marginTop="40dp"-->
    <!--        android:textAlignment="viewStart"-->
    <!--        android:layout_marginStart="20dp"-->
    <!--        android:layout_marginEnd="20dp"-->
    <!--        android:padding="20dp"-->
    <!--        android:background="@drawable/cardview"-->
    <!--        />-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardViewLgName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/LgNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardview"
            android:backgroundTint="@color/CardViewTransparent"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/lg_name"
            android:padding="20dp"
            android:textAlignment="viewStart"
            android:textColor="@color/MainHeadingText"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardViewpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardViewPort">

        <EditText
            android:id="@+id/LgPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardview"
            android:backgroundTint="@color/CardViewTransparent"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/lg_password"
            android:padding="20dp"
            android:password="true"
            android:textAlignment="viewStart"
            android:textColor="@color/MainHeadingText"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="375dp" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ConnectLGButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/cardview"
        android:backgroundTint="@color/ButtonColor"
        android:padding="20dp"
        android:text="Connect"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardViewpassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/cardview"
        android:backgroundTint="@color/ButtonColor"
        android:padding="20dp"
        android:text="Try Again"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardViewpassword" />

    <TextView
        android:id="@+id/ConnectingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/cardview"
        android:backgroundTint="@color/ButtonColor"
        android:fontFamily="@font/poppins_medium"
        android:padding="20dp"
        android:text="Connecting.."
        android:textColor="@color/white"
        android:textSize="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardViewpassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CleanLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cardview"
        android:backgroundTint="@color/ButtonColor"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:text="Clean Logo"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/CleanKMLs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/SaveKml" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/RelaunchLg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cardview"
        android:backgroundTint="@color/ButtonColor"
        android:fontFamily="@font/montserratmedium"
        android:padding="10dp"
        android:text="@string/relaunch_lg"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/PowerOffLg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ResetRefresh" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ResetRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cardview"
        android:backgroundTint="@color/ButtonColor"
        android:fontFamily="@font/montserratmedium"
        android:padding="10dp"
        android:text="@string/reset_refresh"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/PowerOffLg"
        app:layout_constraintEnd_toStartOf="@+id/RelaunchLg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/PowerOffLg" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/RebootLg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cardview"
        android:backgroundTint="@color/ButtonColor"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:text="@string/reboot_lg"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/CleanKMLs"
        app:layout_constraintEnd_toStartOf="@+id/SetRefresh"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/CleanKMLs" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/PowerOffLg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/cardview"
        android:backgroundTint="@color/ButtonColor"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:text="@string/poweroff_lg"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/ResetRefresh"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CleanKMLs" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SaveKml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cardview"
        android:backgroundTint="@color/ButtonColor"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:text="@string/save_kml"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/CleanKMLs"
        app:layout_constraintEnd_toStartOf="@+id/CleanLogo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/SetRefresh" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SetRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cardview"
        android:backgroundTint="@color/ButtonColor"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:text="@string/set_refresh"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/CleanKMLs"
        app:layout_constraintEnd_toStartOf="@+id/SaveKml"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/RebootLg" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CleanKMLs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/cardview"
        android:backgroundTint="@color/ButtonColor"
        android:fontFamily="@font/poppins_medium"
        android:padding="10dp"
        android:text="@string/clean_kml"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/RebootLg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConnectLGButton" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
